deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogo
  labels:
    app.kubernetes.io/component: server
spec:
  selector:
    app.kubernetes.io/name: blogo
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP
